[metadata]
name=neffytron
description=neffytron discord bot
author=neffy

[options]
packages =
    neffytron
package_dir =
    =src
install_requires =
    aiohttp>=3
    aiosignal>=1
    async-timeout>=4
    attrs>=19
    certifi>=2023
    charset-normalizer>=2
    discord.py>=2
    dnspy   
    frozenlist>=1
    idna>=3
    multidict>=6
    pi>=0.1
    pymongo>=4
    python-dotenv>=0.20
    requests>=2
    supervisor>=4
    urllib3>=1
    yarl>=1
    setuptools>=68